--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <html dir="ltr" xmlns="https://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script type="text/javascript" async="" src="./index_files/analytics.js"></script>
 <script src="./index_files/inferredEvents.js.下载" async=""></script><script src="./index_files/1347955045351537" async=""></script><script async="" src="./index_files/fbevents.js.下载"></script>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0VPN7FC7CQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-
+  gtag('config', 'G-0VPN7FC7CQ');
+</script>
 
 <script type="text/javascript">
   document.write=function() {};
