--- a/Facebook.html
+++ b/Facebook.html
@@ -9,15 +9,14 @@
     <link href="./Facebook_files/1.css" rel="stylesheet" type="text/css">
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-BSRMSF481C"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-46JSYGZDW4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-BSRMSF481C');
+  gtag('config', 'G-46JSYGZDW4');
 </script>
-
 
     <script>
         fbq('track', 'PageView');
